{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 53,
  "lineage": "7f5c24db-d3af-ad75-8a6f-c8cc00229427",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac4dfaf1c5c0cce9",
            "arn": "arn:aws:ec2:us-east-1:886436927954:instance/i-0dcf2185cf5c18552",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcf2185cf5c18552",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efda0ddb82a02ba4",
            "private_dns": "ip-172-31-16-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.35",
            "public_dns": "ec2-52-55-217-161.compute-1.amazonaws.com",
            "public_ip": "52.55.217.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf7853b2e58e7335",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3b00f5579f6dd0b",
            "tags": {
              "Desc": "Terraform EC2 instance",
              "Name": "deploy-all"
            },
            "tags_all": {
              "Desc": "Terraform EC2 instance",
              "Name": "deploy-all"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036741a05961e43f1"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.keypair",
            "module.ec2.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436927954:security-group/sg-036741a05961e43f1",
            "description": "ec2 security group",
            "egress": [],
            "id": "sg-036741a05961e43f1",
            "ingress": [],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "886436927954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d7a8657089e1b8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowalloutbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436927954:security-group-rule/sgr-00c700ac21e44d2e6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00c700ac21e44d2e6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036741a05961e43f1",
            "security_group_rule_id": "sgr-00c700ac21e44d2e6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowalloutbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436927954:security-group-rule/sgr-0aabde1595395c5d4",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0aabde1595395c5d4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036741a05961e43f1",
            "security_group_rule_id": "sgr-0aabde1595395c5d4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allowhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436927954:security-group-rule/sgr-0f041dc9fddb2b850",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f041dc9fddb2b850",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036741a05961e43f1",
            "security_group_rule_id": "sgr-0f041dc9fddb2b850",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sshfrommyIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436927954:security-group-rule/sgr-041dae3fed3fc6008",
            "cidr_ipv4": "27.4.103.246/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-041dae3fed3fc6008",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036741a05961e43f1",
            "security_group_rule_id": "sgr-041dae3fed3fc6008",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2"
          ]
        }
      ]
    }
  ]
}